# esp32-alarm

./: Cargo.toml  buzzer-box.FCStd  buzzer-box.FCStd1  sdkconfig.defaults
src/: main.rs
